# handles

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
.github/workflows/: cmake-multi-platform.yml  doxygen-gh-pages.yml
cmake/: handlesConfig.cmake.in
include/handles/: handles.hpp
tests/: CMakeLists.txt  handles.cpp
